--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,21 +2,17 @@
 <resources>
     <string name="app_name">MovieHitApplication</string>
     <string name="action_settings">Настройки</string>
-    <string name="name_movie">Название</string>
-    <string name="movie_details">Детали</string>
-    <string name="rating">Рейтинг</string>
-    <string name="release">Дата выхода</string>
     <string name="pref_sort_order_label">Порядок сортировки</string>
     <string name="trailer">Трейлер</string>
     <string name="pref_most_popular">Самый популярный</string>
     <string name="pref_highest_rated">Наивысший Рейтинг</string>
     <string name="content">Содержание</string>
     <string name="you_clicked">Вы нажали на</string>
-    <string name="plot">Описание</string>
     <string name="movies_refreshed">Фильмы Обновлены</string>
     <string name="loading">Загрузка</string>
     <string name="title">Назва :</string>
     <string name="description">Описание :</string>
     <string name="release_date">Дата выпуска :</string>
     <string name="rated_to">Рейтинг :</string>
+    <string name="pref_sort_by_original_title">По Оригинальному Названию :</string>
 </resources>
