--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">MovieHitApplication</string>
     <string name="action_settings">Settings</string>
     <string name="pref_sort_order_label">Sort Order</string>
+    <string name="pref_sort_by_original_title">By Original Title</string>
     <string name="pref_sort_order_key" translatable="false">sortOrder</string>
     <string name="pref_most_popular">Most Popular</string>
     <string name="pref_highest_rated">Highest Rated</string>
